--- a/Protoshop/Protoshop.csproj
+++ b/Protoshop/Protoshop.csproj
@@ -261,6 +261,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Frame_source\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
